Added Event schema model

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -34,5 +34,9 @@
   "Role": {
     "dataSource": "mongodb",
     "public": false
+  },
+  "Event": {
+    "dataSource": "mongodb",
+    "public": true
   }
 }
