--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^6.2.0",
     "loopback-connector-mongodb": "^4.2.0",
+    "prettier": "^2.3.0",
     "serve-favicon": "^2.0.1",
     "strong-error-handler": "^4.0.0"
   },
